--- a/index.html
+++ b/index.html
@@ -86,26 +86,28 @@
     </style>
   </head>
   <body class="bg-white text-gray-800 font-sans">
-    <header id="header" class="fixed w-full z-20 top-0 left-0 transition-all duration-300 text-white bg-black/30 backdrop-blur-md">
+    <header id="header" class="fixed w-full z-20 top-0 left-0 transition-all duration-300 text-white bg-gray-900">
         <nav class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
             <a href="#home" class="flex items-center space-x-3 rtl:space-x-reverse">
-                <span class="self-center text-2xl font-semibold whitespace-nowrap transition-colors duration-300">Global Path Trades</span>
+                <span class="self-center text-4xl font-semibold whitespace-nowrap">
+                    <span id="brand-name">Global Path Trades</span>
+                </span>
             </a>
             <div id="header-right-group" class="flex md:order-2 items-center">
                 <!-- Social Icons -->
                 <div class="hidden md:flex items-center">
                     <div id="header-partition" class="h-6 w-px bg-gray-400/50 ml-6 mr-6 transition-colors duration-300"></div>
-                    <a href="https://www.instagram.com/globalpathtrades?igsh=NWc2YnViOXVwMm42" target="_blank" rel="noopener noreferrer" aria-label="Instagram" class="header-social-link hover:text-blue-300 transition-colors duration-300 text-xl">
+                    <a href="https://www.instagram.com/globalpathtrades?igsh=NWc2YnViOXVwMm42" target="_blank" rel="noopener noreferrer" aria-label="Instagram" class="header-social-link hover:text-blue-300 transition-colors duration-300 text-2xl">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a href="https://www.linkedin.com/company/global-path-trades/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn" class="header-social-link hover:text-blue-300 transition-colors duration-300 text-xl ml-4">
+                    <a href="https://www.linkedin.com/company/global-path-trades/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn" class="header-social-link hover:text-blue-300 transition-colors duration-300 text-2xl ml-4">
                         <i class="fab fa-linkedin"></i>
                     </a>
-                    <a href="tel:+919579196451" aria-label="Call Us" class="header-social-link hover:text-blue-300 transition-colors duration-300 text-xl ml-4">
+                    <a href="tel:+919579196451" aria-label="Call Us" class="header-social-link hover:text-blue-300 transition-colors duration-300 text-2xl ml-4">
                         <i class="fas fa-phone"></i>
                     </a>
                 </div>
-                <button id="mobile-menu-button" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm rounded-lg md:hidden hover:bg-white/20 focus:outline-none focus:ring-2 focus:ring-white/50 transition-all duration-300" aria-controls="navbar-sticky" aria-expanded="false">
+                <button id="mobile-menu-button" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm rounded-lg md:hidden hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-gray-600 transition-all duration-300" aria-controls="navbar-sticky" aria-expanded="false">
                     <span class="sr-only">Open main menu</span>
                     <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15" />
@@ -114,11 +116,11 @@
             </div>
             <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
                 <ul class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-700 rounded-lg md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-transparent">
-                    <li><a href="#home" class="block py-2 px-3 rounded md:p-0 transition-colors duration-300" aria-current="page">Home</a></li>
-                    <li><a href="#about" class="block py-2 px-3 rounded md:p-0 transition-colors duration-300 hover:text-blue-300 md:hover:bg-transparent">About Us</a></li>
-                    <li><a href="#products" class="block py-2 px-3 rounded md:p-0 transition-colors duration-300 hover:text-blue-300 md:hover:bg-transparent">Products</a></li>
-                    <li><a href="#services" class="block py-2 px-3 rounded md:p-0 transition-colors duration-300 hover:text-blue-300 md:hover:bg-transparent">Services</a></li>
-                    <li><a href="#contact" class="block py-2 px-3 rounded md:p-0 transition-colors duration-300 hover:text-blue-300 md:hover:bg-transparent">Contact</a></li>
+                    <li><a href="#home" class="block py-2 px-3 rounded md:p-0 transition-colors duration-300 md:text-2xl" aria-current="page">Home</a></li>
+                    <li><a href="#about" class="block py-2 px-3 rounded md:p-0 transition-colors duration-300 hover:text-blue-300 md:hover:bg-transparent md:text-2xl">About Us</a></li>
+                    <li><a href="#products" class="block py-2 px-3 rounded md:p-0 transition-colors duration-300 hover:text-blue-300 md:hover:bg-transparent md:text-2xl">Products</a></li>
+                    <li><a href="#services" class="block py-2 px-3 rounded md:p-0 transition-colors duration-300 hover:text-blue-300 md:hover:bg-transparent md:text-2xl">Services</a></li>
+                    <li><a href="#contact" class="block py-2 px-3 rounded md:p-0 transition-colors duration-300 hover:text-blue-300 md:hover:bg-transparent md:text-2xl">Contact</a></li>
                     <!-- Social Icons for Mobile Menu -->
                     <li class="pt-4 mt-4 border-t border-gray-600 md:hidden">
                         <div class="flex justify-center space-x-6">
@@ -146,7 +148,7 @@
                 <h1 class="text-4xl md:text-6xl font-bold mb-4 leading-tight hero-title">Connecting India to the World</h1>
                 <p class="text-lg md:text-xl mb-8 max-w-3xl mx-auto hero-subtitle">Global Path Trades is your trusted partner in import-export, bridging markets and creating opportunities with efficiency and transparency.</p>
                 <div class="flex justify-center hero-buttons">
-                    <button id="trade-with-us-button" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-8 rounded-full transition-all duration-300 ease-in-out text-lg transform hover:scale-105 hover:-translate-y-1 hover:shadow-xl">Trade With Us</button>
+                    <button id="trade-with-us-button" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-8 rounded-full transition-all duration-300 ease-in-out text-xl transform hover:scale-105 hover:-translate-y-1 hover:shadow-xl">Trade With Us</button>
                 </div>
             </div>
         </section>
