--- a/trade.html
+++ b/trade.html
@@ -23,25 +23,27 @@
     </style>
 </head>
 <body class="bg-gray-50 text-gray-800 font-sans">
-    <header id="header" class="fixed w-full z-20 top-0 left-0 transition-all duration-300 bg-white shadow-md text-gray-700">
+    <header id="header" class="fixed w-full z-20 top-0 left-0 transition-all duration-300 bg-gray-900 text-white">
         <nav class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
             <a href="index.html#home" class="flex items-center space-x-3 rtl:space-x-reverse">
-                <span class="self-center text-2xl font-semibold whitespace-nowrap transition-colors duration-300 text-blue-800">Global Path Trades</span>
+                <span class="self-center text-4xl font-semibold whitespace-nowrap">
+                    <span class="text-blue-400">Global Path Trades</span>
+                </span>
             </a>
             <div id="header-right-group" class="flex md:order-2 items-center">
                 <div class="hidden md:flex items-center">
-                    <div id="header-partition" class="h-6 w-px bg-gray-300 ml-6 mr-6 transition-colors duration-300"></div>
-                    <a href="https://www.instagram.com/globalpathtrades?igsh=NWc2YnViOXVwMm42" target="_blank" rel="noopener noreferrer" aria-label="Instagram" class="hover:text-blue-700 transition-colors duration-300 text-xl">
+                    <div id="header-partition" class="h-6 w-px bg-gray-400/50 ml-6 mr-6 transition-colors duration-300"></div>
+                    <a href="https://www.instagram.com/globalpathtrades?igsh=NWc2YnViOXVwMm42" target="_blank" rel="noopener noreferrer" aria-label="Instagram" class="hover:text-blue-300 transition-colors duration-300 text-2xl">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a href="https://www.linkedin.com/company/global-path-trades/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn" class="hover:text-blue-700 transition-colors duration-300 text-xl ml-4">
+                    <a href="https://www.linkedin.com/company/global-path-trades/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn" class="hover:text-blue-300 transition-colors duration-300 text-2xl ml-4">
                         <i class="fab fa-linkedin"></i>
                     </a>
-                    <a href="tel:+919579196451" aria-label="Call Us" class="hover:text-blue-700 transition-colors duration-300 text-xl ml-4">
+                    <a href="tel:+919579196451" aria-label="Call Us" class="hover:text-blue-300 transition-colors duration-300 text-2xl ml-4">
                         <i class="fas fa-phone"></i>
                     </a>
                 </div>
-                <button id="mobile-menu-button" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm rounded-lg md:hidden text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 transition-all duration-300" aria-controls="navbar-sticky" aria-expanded="false">
+                <button id="mobile-menu-button" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm rounded-lg md:hidden hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-gray-600 transition-all duration-300" aria-controls="navbar-sticky" aria-expanded="false">
                     <span class="sr-only">Open main menu</span>
                     <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15" />
@@ -49,12 +51,26 @@
                 </button>
             </div>
             <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
-                <ul class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-transparent">
-                    <li><a href="index.html#home" class="block py-2 px-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0">Home</a></li>
-                    <li><a href="index.html#about" class="block py-2 px-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0">About Us</a></li>
-                    <li><a href="index.html#products" class="block py-2 px-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0">Products</a></li>
-                    <li><a href="index.html#services" class="block py-2 px-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0">Services</a></li>
-                    <li><a href="index.html#contact" class="block py-2 px-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0">Contact</a></li>
+                <ul class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-700 rounded-lg bg-gray-900 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-transparent">
+                    <li><a href="index.html#home" class="block py-2 px-3 rounded hover:bg-gray-800 md:hover:bg-transparent md:hover:text-blue-300 md:p-0 md:text-2xl">Home</a></li>
+                    <li><a href="index.html#about" class="block py-2 px-3 rounded hover:bg-gray-800 md:hover:bg-transparent md:hover:text-blue-300 md:p-0 md:text-2xl">About Us</a></li>
+                    <li><a href="index.html#products" class="block py-2 px-3 rounded hover:bg-gray-800 md:hover:bg-transparent md:hover:text-blue-300 md:p-0 md:text-2xl">Products</a></li>
+                    <li><a href="index.html#services" class="block py-2 px-3 rounded hover:bg-gray-800 md:hover:bg-transparent md:hover:text-blue-300 md:p-0 md:text-2xl">Services</a></li>
+                    <li><a href="index.html#contact" class="block py-2 px-3 rounded hover:bg-gray-800 md:hover:bg-transparent md:hover:text-blue-300 md:p-0 md:text-2xl">Contact</a></li>
+                    <!-- Social Icons for Mobile Menu -->
+                    <li class="pt-4 mt-4 border-t border-gray-600 md:hidden">
+                        <div class="flex justify-center space-x-6">
+                            <a href="https://www.instagram.com/globalpathtrades?igsh=NWc2YnViOXVwMm42" target="_blank" rel="noopener noreferrer" aria-label="Instagram" class="hover:text-blue-300 transition-colors text-2xl">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                            <a href="https://www.linkedin.com/company/global-path-trades/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn" class="hover:text-blue-300 transition-colors text-2xl">
+                                <i class="fab fa-linkedin"></i>
+                            </a>
+                            <a href="tel:+919579196451" aria-label="Call Us" class="hover:text-blue-300 transition-colors text-2xl">
+                                <i class="fas fa-phone"></i>
+                            </a>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </nav>
