refactor: Update script paths from .tsx to .js
Changed script references in `index.html` and `trade.html` from `.tsx` to `.js` to reflect the compiled JavaScript output. This ensures the browser correctly loads the application's JavaScript files.

--- a/index.html
+++ b/index.html
@@ -894,6 +894,6 @@
         </div>
     </div>
 
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="/index.js"></script>
   </body>
 </html>
