--- a/trade.html
+++ b/trade.html
@@ -469,6 +469,6 @@
         </div>
     </footer>
 
-    <script type="module" src="/trade.tsx"></script>
+    <script type="module" src="/trade.js"></script>
 </body>
 </html>
